kubernetes/template/deployment.yml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  rules:
    - host: ""
      http:
        paths:
               - path: /as
                 pathType: Prefix
                 backend:
                   service:
                     name: bbb
                     port:
                       number: 8080
               - path: /a23s
                 pathType: Prefix
                 backend:
                   service:
                     name: b2
                     port:
                       number: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bbb
  labels:
    app: bbb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bbb
  template:
    metadata:
      labels:
        app: bbb
    spec:
      containers:
        - name: bbb
          image: username/bbb:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: b2
  labels:
    app: b2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: b2
  template:
    metadata:
      labels:
        app: b2
    spec:
      containers:
        - name: b2
          image: username/b2:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5


---


apiVersion: v1
kind: Service
metadata:
  name: bbb
  labels:
    app: bbb
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: bbb


---


apiVersion: v1
kind: Service
metadata:
  name: b2
  labels:
    app: b2
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: b2
